--- a/src/app/main/main-content/member-student/member-student.component.html
+++ b/src/app/main/main-content/member-student/member-student.component.html
@@ -21,12 +21,12 @@
     
               <div class="people-text">
                 <h3 class="name">{{person.name}}</h3>
-                <p class="text-center menu01">
-                  {{person.topics}} <br>
-                  {{person.email}} <br>
-                  {{person.team}} <br>
-                  {{person.affiliation_name}}
-                </p>
+                <div class="text-center menu01 people-info">
+                  <p class="people-info-desc" *ngIf="person.topics">{{person.topics}}</p>
+                  <p class="people-info-desc" *ngIf="person.email">{{person.email}}</p>
+                  <p class="people-info-desc" *ngIf="person.team">{{person.team}}</p>
+                  <p class="people-info-desc" *ngIf="person.affiliation_name">{{person.affiliation_name}}</p>
+                </div>
                 <sub class="menu01">{{person.status}}</sub>
               </div>
     
@@ -51,12 +51,12 @@
               
               <div class="people-text">
                 <h3 class="name">{{person.name}}</h3>
-                <p class="text-center menu01">
-                  {{person.topics}} <br>
-                  {{person.email}} <br>
-                  {{person.team}} <br>
-                  {{person.affiliation_name}}
-                </p>
+                <div class="text-center menu01 people-info">
+                  <p class="people-info-desc" *ngIf="person.topics">{{person.topics}}</p>
+                  <p class="people-info-desc" *ngIf="person.email">{{person.email}}</p>
+                  <p class="people-info-desc" *ngIf="person.team">{{person.team}}</p>
+                  <p class="people-info-desc" *ngIf="person.affiliation_name">{{person.affiliation_name}}</p>
+                </div>
                 <sub class="menu01">{{person.status}}</sub>
               </div>
             </div>
@@ -84,12 +84,12 @@
               </div>
               <div class="people-text">
                 <h3 class="name">{{person.name}}</h3>
-                <p class="text-center menu01">
-                  {{person.topics}} <br>
-                  {{person.email}} <br>
-                  {{person.team}} <br>
-                  {{person.affiliation_name}}
-                </p>
+                <div class="text-center menu01 people-info">
+                  <p class="people-info-desc" *ngIf="person.topics">{{person.topics}}</p>
+                  <p class="people-info-desc" *ngIf="person.email">{{person.email}}</p>
+                  <p class="people-info-desc" *ngIf="person.team">{{person.team}}</p>
+                  <p class="people-info-desc" *ngIf="person.affiliation_name">{{person.affiliation_name}}</p>
+                </div>
                 <sub class="menu01">{{person.status}}</sub>
               </div>
     
@@ -112,12 +112,12 @@
               </div>
               <div class="people-text">
                 <h3 class="name">{{person.name}}</h3>
-                <p class="text-center menu01">
-                  {{person.topics}} <br>
-                  {{person.email}} <br>
-                  {{person.team}} <br>
-                  {{person.affiliation_name}}
-                </p>
+                <div class="text-center menu01 people-info">
+                  <p class="people-info-desc" *ngIf="person.topics">{{person.topics}}</p>
+                  <p class="people-info-desc" *ngIf="person.email">{{person.email}}</p>
+                  <p class="people-info-desc" *ngIf="person.team">{{person.team}}</p>
+                  <p class="people-info-desc" *ngIf="person.affiliation_name">{{person.affiliation_name}}</p>
+                </div>
                 <sub class="menu01">{{person.status}}</sub>
               </div>
     
@@ -139,12 +139,12 @@
               </div>
               <div class="people-text">
                 <h3 class="name">{{person.name}}</h3>
-                <p class="text-center menu01">
-                  {{person.topics}} <br>
-                  {{person.email}} <br>
-                  {{person.team}} <br>
-                  {{person.affiliation_name}}
-                </p>
+                <div class="text-center menu01 people-info">
+                  <p class="people-info-desc" *ngIf="person.topics">{{person.topics}}</p>
+                  <p class="people-info-desc" *ngIf="person.email">{{person.email}}</p>
+                  <p class="people-info-desc" *ngIf="person.team">{{person.team}}</p>
+                  <p class="people-info-desc" *ngIf="person.affiliation_name">{{person.affiliation_name}}</p>
+                </div>
                 <sub class="menu01">{{person.status}}</sub>
               </div>
     
@@ -165,12 +165,12 @@
               </div>
               <div class="people-text">
                 <h3 class="name">{{person.name}}</h3>
-                <p class="text-center menu01">
-                  {{person.topics}} <br>
-                  {{person.email}} <br>
-                  {{person.team}} <br>
-                  {{person.affiliation_name}}
-                </p>
+                <div class="text-center menu01 people-info">
+                  <p class="people-info-desc" *ngIf="person.topics">{{person.topics}}</p>
+                  <p class="people-info-desc" *ngIf="person.email">{{person.email}}</p>
+                  <p class="people-info-desc" *ngIf="person.team">{{person.team}}</p>
+                  <p class="people-info-desc" *ngIf="person.affiliation_name">{{person.affiliation_name}}</p>
+                </div>
                 <sub class="menu01">{{person.status}}</sub>
               </div>
     
@@ -191,11 +191,12 @@
               </div>
               <div class="people-text">
                 <h3 class="name">{{person.name}}</h3>
-                <p class="text-center menu01">
-                  {{person.topics}} <br>
-                  {{person.email}} <br>
-                  {{person.affiliation_name}}
-                </p>
+                <div class="text-center menu01 people-info">
+                  <p class="people-info-desc" *ngIf="person.topics">{{person.topics}}</p>
+                  <p class="people-info-desc" *ngIf="person.email">{{person.email}}</p>
+                  <p class="people-info-desc" *ngIf="person.team">{{person.team}}</p>
+                  <p class="people-info-desc" *ngIf="person.affiliation_name">{{person.affiliation_name}}</p>
+                </div>
                 <sub class="menu01">{{person.status}}</sub>
               </div>
     
@@ -216,12 +217,12 @@
               </div>
               <div class="people-text">
                 <h3 class="name">{{person.name}}</h3>
-                <p class="text-center menu01">
-                  {{person.topics}} <br>
-                  {{person.email}} <br>
-                  {{person.team}} <br>
-                  {{person.affiliation_name}}
-                </p>
+                <div class="text-center menu01 people-info">
+                  <p class="people-info-desc" *ngIf="person.topics">{{person.topics}}</p>
+                  <p class="people-info-desc" *ngIf="person.email">{{person.email}}</p>
+                  <p class="people-info-desc" *ngIf="person.team">{{person.team}}</p>
+                  <p class="people-info-desc" *ngIf="person.affiliation_name">{{person.affiliation_name}}</p>
+                </div>
                 <sub class="menu01">{{person.status}}</sub>
               </div>
     
@@ -243,12 +244,12 @@
               </div>
               <div class="people-text">
                 <h3 class="name">{{person.name}}</h3>
-                <p class="text-center menu01">
-                  {{person.topics}} <br>
-                  {{person.email}} <br>
-                  {{person.team}} <br>
-                  {{person.affiliation_name}}
-                </p>
+                <div class="text-center menu01 people-info">
+                  <p class="people-info-desc" *ngIf="person.topics">{{person.topics}}</p>
+                  <p class="people-info-desc" *ngIf="person.email">{{person.email}}</p>
+                  <p class="people-info-desc" *ngIf="person.team">{{person.team}}</p>
+                  <p class="people-info-desc" *ngIf="person.affiliation_name">{{person.affiliation_name}}</p>
+                </div>
                 <sub class="menu01">{{person.status}}</sub>
               </div>
     
