--- a/src/app/main/main-content/member-student/member-student.component.scss
+++ b/src/app/main/main-content/member-student/member-student.component.scss
@@ -7,6 +7,14 @@
     align-items: center;
 }
 
+.people-info {
+    margin-bottom: 1.5rem;
+}
+
+.people-info-desc {
+    margin-bottom: 0;
+}
+
 .people {
     // row
     display: flex;
