--- a/src/app/main/main-content/about-admission/about-admission.component.html
+++ b/src/app/main/main-content/about-admission/about-admission.component.html
@@ -10,7 +10,7 @@
       <div class="member_image_box col-sm-12">
         <!-- card container-->
         <div class="partner-box col-sm-12 col-md-6 col-lg-3">
-          <div class="partner-img text-center"><img [src]='relPath + "about_admission_01.png"'></div>
+          <div class="partner-img text-center"><img [src]='relPath + "about_admission_01_StudentResearchers.png"'></div>
           <div class="partner-text text-center">
             <h3>Student Researchers</h3>
             <p>Talented and motivated students interested in the field of computer graphics.</p>
@@ -18,7 +18,7 @@
           </div>
         <!-- card container-->
         <div class="partner-box col-sm-12 col-md-6 col-lg-3">
-          <div class="partner-img"><img [src]="relPath + 'about_admission_02.png'"></div>
+          <div class="partner-img"><img [src]="relPath + 'about_admission_02_PostdocResearchers.png'"></div>
           <div class="partner-text text-center">
             <h3>Postdoc Researchers</h3>
             <p>Highly motivated postdoc researchers in the area of character animation, fluid simulation or computer vision.</p>
@@ -26,7 +26,7 @@
         </div>
         <!-- card container-->
         <div class="partner-box col-sm-12 col-md-6 col-lg-3">
-          <div class="partner-img"><img [src]=" relPath + 'about_admission_03.png'" alt="Partner Company Img"/></div>
+          <div class="partner-img"><img [src]=" relPath + 'about_admission_03_CGProgrammers.png'" alt="Partner Company Img"/></div>
           <div class="partner-text text-center">
             <h3>CG Programmers</h3>
             <p> Talented and enthusiastic CG programmers to support our VFX, Animation production and CG research.</p>
@@ -34,7 +34,7 @@
         </div>
         <!-- card container-->
         <div class="partner-box col-sm-12 col-md-6 col-lg-3">
-          <div class="partner-img"><img [src]=" relPath + 'about_admission_03.png'" alt="Partner Company Img"/></div>
+          <div class="partner-img"><img [src]=" relPath + 'about_admission_04_CGArtist.png'" alt="Partner Company Img"/></div>
           <div class="partner-text text-center">
             <h3>CG Artist</h3>
             <p>Talented, motivated, and experienced CG artists to join its production team. Should have experience in modeling, rendering or effects.</p>
