--- a/src/app/main/main-content/issues-news/issues-news.component.scss
+++ b/src/app/main/main-content/issues-news/issues-news.component.scss
@@ -2,8 +2,7 @@
 
 //modal
 .modal-lg {
-    // max-width: 1200px;
-    max-width: 50vw;
+    max-width: 60vw;
 }
 
 .modal-content {
@@ -90,5 +89,12 @@ hr {
     }
     .data-img {
         width:100% !important;
+    }
+}
+
+
+@media (max-width: 576px) {
+    .modal-lg {
+        width: unset;
     }
 }
