--- a/src/app/main/main-content/research-projects-individual/research-projects-individual.component.scss
+++ b/src/app/main/main-content/research-projects-individual/research-projects-individual.component.scss
@@ -22,6 +22,7 @@
 
 .column-title {
     margin-bottom: 2rem;
+    padding:0;
 }
 
 .project-desc {
@@ -83,6 +84,7 @@
 
 .video-box {
     margin-bottom: 1.5rem;
+    padding:0;
 }
 
 @media (max-width: 990px) {
