--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
       <a routerLink="/main/people" class="list-group-item list-group-item-action">PEOPLE</a>
       <a routerLink="/main/area" class="list-group-item list-group-item-action">RESEARCH</a>
       <a routerLink="/main/news" class="list-group-item list-group-item-action">NEWS & EVENT</a>
-      <a routerLink="/main/downloads" class="list-group-item list-group-item-action">ARCHIVE</a>
+      <a routerLink="/main/seminar" class="list-group-item list-group-item-action">ARCHIVE</a>
     </div>
   </div>
 </div>
@@ -35,7 +35,7 @@
       <a class="nav-link" routerLink="/main/news">NEWS & EVENT</a>
     </li>
     <li class="menu01 nav-item">
-      <a class="nav-link" routerLink="/main/downloads">ARCHIVE</a>
+      <a class="nav-link" routerLink="/main/seminar">ARCHIVE</a>
     </li>
   </ul>
   <ul class="search-nav">
@@ -229,7 +229,7 @@
                 <a class="" routerLink="/main/news">NEWS & EVENT</a>
               </li>
               <li class="">
-                <a class="" routerLink="/main/downloads">ARCHIVE</a>
+                <a class="" routerLink="/main/seminar">ARCHIVE</a>
               </li>
             </ul>
           </div>
