--- a/src/app/main/main-content/about-info/about-info.component.html
+++ b/src/app/main/main-content/about-info/about-info.component.html
@@ -30,7 +30,7 @@
           <h5 class="about-subtitle orange">Telephone</h5>
           <p class="about-text">+82-42-350-5918</p>
           <h5 class="about-subtitle orange">Email</h5>
-          <p class="about-text">visualmedia_at_kaist.ac.kr</p>
+          <p class="about-text">visualmedia@kaist.ac.kr</p>
         </div>
         <!--<div class="about-img"><img src="../../../../assets/imgs/about_us_map.png" class="map"></div>-->
         <!--<sebm-google-map  [latitude]="lat" [longitude]="lng">
