--- a/src/app/main/main-content/research-projects/research-projects.component.scss
+++ b/src/app/main/main-content/research-projects/research-projects.component.scss
@@ -37,6 +37,7 @@
     padding: 0;
     padding-right: 3.5rem;
     table {
+        font-size: 0.9rem;
         max-width: 600px;
 
         .table-year {
