--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -54,7 +54,7 @@
 
       <div class="video-background">
         <div class="video-foreground">
-          <iframe src="https://www.youtube.com/embed/Ewb_YBTEkZ0?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&mute=1&playlist=W0LHTWG-UmQ" frameborder="0" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/Ewb_YBTEkZ0?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&mute=1&playlist=Ewb_YBTEkZ0" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
 
