--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -219,6 +219,7 @@
       max-width:300px;
       margin: auto;
       margin-bottom: 1.5rem;
+      cursor: pointer;
       img.sel-img {
         // -webkit-animation: sel-img-animation 0.3s 1;
         filter: brightness(30%);
