--- a/src/app/main/main-content/about-info/about-info.component.html
+++ b/src/app/main/main-content/about-info/about-info.component.html
@@ -3,7 +3,7 @@
 
     <div class="front-image-max">
       <img src="./../../../../assets/Contents/imgs/about_us_intro.png">
-      <h2 class="front-title">ABOUT VISUAL MEDIA LAB</h2>
+      <h2 class="front-title">About Visual Media Lab</h2>
     </div> 
 
     <div class="row desc-box no-gutters">
@@ -20,7 +20,7 @@
 
       </div>
 
-      <h2 class="about-title">CONTACT US</h2>
+      <h2 class="about-title">Contact us</h2>
 
       <div class="about">
         <div class="about-box">
