--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -83,7 +83,7 @@
     <div class="row content" id="nav-trigger">
 
       <div id="arrowBtnPlace" class="Heading col-sm-12 text-center" scrollSpy>
-        <h1>Reseach Area</h1>
+        <h1 routerLink="/main/area" >Reseach Area</h1>
         <p class="section-desc">The main research area includes motion and facial animation of virtual chararcter, immersive display system and human
           interaction system</p>
       </div>
@@ -110,7 +110,7 @@
       <div class="col-sm-12">
         <div class="col-sm-12 news">
           <div class="Heading text-center col-sm-12">
-            <h1>Recent Publications</h1>
+            <h1 routerLink="/main/international" >Recent Publications</h1>
             <p class="section-desc">The main research area includes motion and facial animation of virtual chararcter, immersive display system and
               human interaction system</p>
           </div>
@@ -138,7 +138,7 @@
 
         <div class="col-sm-12 news">
           <div class="Heading text-center col-sm-12">
-            <h1>Recent News and Media</h1>
+          <h1 routerLink="/main/news" >Recent News and Media</h1>
             <p class="section-desc">Recent news related to Visual Media Lab</p>
           </div>
 
