--- a/src/app/main/main-content/member-student/member-student.component.html
+++ b/src/app/main/main-content/member-student/member-student.component.html
@@ -71,7 +71,7 @@
           <div *ngIf="(data_doctor | async)?.length > 0" class="people col-sm-12">
             <div class="people-status col-sm-12">
               <h2 id="phd">
-                Ph.d Student
+                Ph.D Students
               </h2>
             </div>
             <!-- card container-->
