--- a/src/app/main/main-content/proffessor/proffessor.component.html
+++ b/src/app/main/main-content/proffessor/proffessor.component.html
@@ -14,7 +14,7 @@
 
         <h5 *ngIf="person.email">Book</h5>
         <p>틀을 깨려는 용기가 필요해 </p>
-        <img (click)="navigateToBook()" src="http://image.kyobobook.co.kr/images/book/large/501/l9788956244501.jpg" class="book">
+        <img class="prof__book"(click)="navigateToBook()" src="http://image.kyobobook.co.kr/images/book/large/501/l9788956244501.jpg" class="book">
 
       </div>
 
