--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -159,7 +159,7 @@
 
         <div class="col-sm-12 news">
           <div class="Heading text-center col-sm-12">
-            <h1>Partners</h1>
+            <h1 routerLink="/main/partners">Partners</h1>
             <p class="section-desc">Partners with the Visual Media Lab</p>
           </div>
 
