--- a/src/app/main/main-content/member-student-individual/member-student-individual.component.html
+++ b/src/app/main/main-content/member-student-individual/member-student-individual.component.html
@@ -16,13 +16,15 @@
 
       <div class="person-desc">
         <h1>{{person.name}}</h1>
-        <p>{{person.type | typeChange}}</p>
-        <p>{{person.teams_name}}</p>
+        <p class="person-desc__about">{{person.type | typeChange}}</p>
+        <p class=" person-desc__about link" (click)='navigateTo("main/area/teams", person.teams_id)'>{{person.teams_name}}</p>
         <div *ngIf="person.affiliation_name;then content else other_content">here is ignored</div>
 
-        <ng-template #content><p>{{person.affiliation_name}}</p></ng-template>
-        <ng-template #other_content><p>Visual Media Lab <br> Graduate School of Culture and Technology, KAIST</p></ng-template>
+        <ng-template #content><p (click)="navigateTo(person.affiliation_link, 'external')" class="link person-desc__about">{{person.affiliation_name}}</p></ng-template>
+        <ng-template #other_content><p class="person-desc__about" >Visual Media Lab <br> Graduate School of Culture and Technology, KAIST</p></ng-template>
 
+        <p class="person-desc__about link" (click)="navigateTo(person.personal_page, 'external')" *ngIf="(person.personal_page).length > 0">Link to Personal Page</p>
+         
         
         <hr/>
 
@@ -43,7 +45,7 @@
               <tr *ngFor="let pub of person.publications | orderBy:order:ascending">
                 <td class="table-left">{{pub.conference}}</td>
                 <td>
-                  <p>{{pub.title}}</p>
+                  <p class="link" (click)='navigateTo("main/international/individual", pub.id )'>{{pub.title}}</p>
                 </td>
               </tr>
             </tbody>
@@ -59,6 +61,7 @@
           <table class="table">
             <tbody>
               <tr *ngFor="let pro of person.projects | orderBy:order:ascending">
+
                 <td class="table-left">{{pro.year}}</td>
                 <td>
                   <p>{{pro.name}}</p>
