--- a/src/app/main/main-content/research-publicate-individual/research-publicate-individual.component.html
+++ b/src/app/main/main-content/research-publicate-individual/research-publicate-individual.component.html
@@ -58,27 +58,27 @@
       </div>
 
       <div class="imgDiv" *ngIf="pubs[0].subimg1?.length > 0" >
-        <img default="./assets/Contents/imgs/no_image.jpg" [srcset]=" imgPath + pubs[0].subimg" [src]=" imgPath + pubs[0].subimg" class="max-img">
+        <img default="./assets/Contents/imgs/no_image.jpg" [srcset]=" imgPath + pubs[0].subimg1" [src]=" imgPath + pubs[0].subimg1" class="max-img">
       </div>
 
-      <div class="col-12 abstract" *ngIf="pubs[0].subimg_description1?.length > 0">
-        <p>{{pubs[0]?.subimg_description}}</p>
+      <div class="col-12 abstract" *ngIf="pubs[0].subimg1_description?.length > 0">
+        <p>{{pubs[0]?.subimg1_description}}</p>
       </div>
-      j
+
       <div class="imgDiv" *ngIf="pubs[0].subimg2?.length > 0" >
-        <img default="./assets/Contents/imgs/no_image.jpg" [srcset]=" imgPath + pubs[0].subimg" [src]=" imgPath + pubs[0].subimg" class="max-img">
+        <img default="./assets/Contents/imgs/no_image.jpg" [srcset]=" imgPath + pubs[0].subimg2" [src]=" imgPath + pubs[0].subimg2" class="max-img">
       </div>
 
-      <div class="col-12 abstract" *ngIf="pubs[0].subimg_description2?.length > 0">
-        <p>{{pubs[0]?.subimg_description}}</p>
+      <div class="col-12 abstract" *ngIf="pubs[0].subimg2_description?.length > 0">
+        <p>{{pubs[0]?.subimg2_description}}</p>
       </div>
 
       <div class="imgDiv" *ngIf="pubs[0].subimg3?.length > 0" >
-        <img default="./assets/Contents/imgs/no_image.jpg" [srcset]=" imgPath + pubs[0].subimg" [src]=" imgPath + pubs[0].subimg" class="max-img">
+        <img default="./assets/Contents/imgs/no_image.jpg" [srcset]=" imgPath + pubs[0].subimg3" [src]=" imgPath + pubs[0].subimg3" class="max-img">
       </div>
 
-      <div class="col-12 abstract" *ngIf="pubs[0].subimg_description3?.length > 0">
-        <p>{{pubs[0]?.subimg_description}}</p>
+      <div class="col-12 abstract" *ngIf="pubs[0].subimg3_description?.length > 0">
+        <p>{{pubs[0]?.subimg3_description}}</p>
       </div>
 
 
