--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -252,6 +252,12 @@
               <mat-icon class="md-light">email</mat-icon>
               <p>visualmedia@kaist.ac.kr</p>
             </div>
+
+            <div class="single">
+              <mat-icon class="md-light">movie</mat-icon>
+              <a href="https://www.youtube.com/user/VMLKAIST" style="font-size: 14px; color: white;">Youtube Channel</a>
+            </div>
+
           </div>
         </div>
         <div class="clearfix"></div>
