--- a/src/app/main/main-content/research-publicate-individual/research-publicate-individual.component.scss
+++ b/src/app/main/main-content/research-publicate-individual/research-publicate-individual.component.scss
@@ -82,3 +82,14 @@
 .videoURL {
     margin-bottom: 100px;
 }
+
+.material-icons {
+    position: relative;
+    top: 0.15rem;
+    right: 0.1rem;
+    font-size: 1rem;
+}
+.mat-icon {
+    width:1rem;
+    height:1rem;
+}
